# Datorgrafik

./: .gitignore  README.md
Lab1/: CMakeLists.txt  lab1-1.cpp  lab1-2.cpp  lab1-3.cpp  lab1-3_fs.glsl  lab1-3_vs.glsl  lab1-4.cpp  lab1-4_fs.glsl  lab1-4_vs.glsl  lab1-5.cpp  lab1-5_fs.glsl  lab1-5_vs.glsl  lab1-6.cpp  lab1-6_fs.glsl  lab1-6_vs.glsl  lab1-7.cpp  lab1-7_fs.glsl  lab1-7_vs.glsl
Lab2/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  lab2-1.cpp  lab2-2.cpp  lab2-2_fs.glsl  lab2-2_vs.glsl  lab2-3.cpp  lab2-3_2-4_fs.glsl  lab2-3_vs.glsl
Lab3/: CMakeLists.txt  lab3-1.cpp  lab3-1_fs.glsl  lab3-1_fs_oideh.glsl  lab3-1_oideh.cpp  lab3-1_vs.glsl  lab3-1_vs_oideh.glsl  lab3-2.cpp  lab3-2_fs.glsl  lab3-3.cpp  lab3-3_fs.glsl  lab3-3_vs.glsl  lab3-4.cpp  lab3-4_fs.glsl  lab3-4_tc.glsl  lab3-4_te.glsl  lab3-4_vs.glsl
Lab4/: lab4-1.cpp  lab4-1_fs.glsl  lab4-2.cpp  lab4-2_fs.glsl  lab4-3.cpp  lab4-3_fs.glsl  lab4-4.cpp  lab4-4_fs.glsl  local_config.h  testShader_fs.glsl
common/: config.h
common/data/: .directory
common/lib/: lodepng.lib  readfile.lib
common/scripts/: compute_distance_field.m  compute_normal_map.m  compute_signed_distance_field.m  edt1d.m  getTexCoords.m
lab2.3KOPIA/: lab2-2_fs.glsl
